--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     margin: 0;
 }
 
+
 /*--------------------------
             RESET
 ---------------------------*/
@@ -18,6 +19,7 @@
 
 body{
     background-color: #e6e6e6;
+    font-family: 'Roboto', sans-serif;
 }
 
 
